# persian-translator-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  deploy.sh  pyproject.toml
src/persian_translator_bot/: __main__.py  bot.py  config.py  database.py  rate_limiter.py  translator.py
tests/: conftest.py  test_bot.py  test_config.py  test_database.py  test_rate_limiter.py  test_translator.py
